--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "@prisma/client": "^4.14.1",
+    "prettier": "^2.8.8",
+    "prisma": "^4.14.1"
   }
 }
